--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - Designer & Developer</title>
-    <meta name="description" content="Personal website of Your Name - Designer & Developer" />
-    <meta name="author" content="Your Name" />
-
-    <meta property="og:title" content="Your Name - Designer & Developer" />
-    <meta property="og:description" content="Personal website of Your Name - Designer & Developer" />
+    <title>Pau Kuntong - Designer & Developer</title>
+    <meta name="description" content="Personal website of Pau Kuntong - Designer & Developer" />
+    <meta name="author" content="Pau Kuntong" />
+    <meta property="og:title" content="Pau Kuntong - Designer & Developer" />
+    <meta property="og:description" content="Personal website of Pau Kuntong - Designer & Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   </head>
-
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
